name:                haskell-cloudfront
version:             0.1.0.0
synopsis:            AWS Cloudfront Expressions and Support
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-cloudfront#readme
license:             BSD3
license-file:        LICENSE
author:              Greg Wiley
maintainer:          aztec.rex@jammm.com
copyright:           2016 Greg Wiley
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-cloudfront-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-cloudfront
  default-language:    Haskell2010

test-suite haskell-cloudfront-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-cloudfront
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aztecrex/haskell-cloudfront
